DPHC-73 - Fix community styling on IE11

--- a/packages/portal-style/src/modules/_community-view.scss
+++ b/packages/portal-style/src/modules/_community-view.scss
@@ -198,7 +198,8 @@
     }
 
     #{$self}-title {
-      flex: 0 0 calc(100% - 640px);
+      width: calc(100% - 640px);
+      flex: 0 0 auto;
     }
 
     #{$self}-office {
@@ -324,7 +325,8 @@
 
   &-statuschange {
     #{$self}-title {
-      flex: 0 0 calc(100% - 620px);
+      width: calc(100% - 620px);
+      flex: 0 0 auto;
     }
 
     #{$self}-status {
